// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFieldText is rendered 1`] = `
<oui-form-control-layout
  fullwidth="false"
  icon="foo"
  inputid="1"
>
  <oui-validatable-control>
    <input
      aria-label="aria-label"
      class="ouiFieldText testClass1 testClass2 ouiFieldText--withIcon"
      data-test-subj="test subject string"
      id="1"
      name="elastic"
      placeholder="Placeholder"
      type="text"
      value="1"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldText props controlOnly is rendered 1`] = `
<oui-validatable-control>
  <input
    class="ouiFieldText"
    type="text"
  />
</oui-validatable-control>
`;

exports[`OuiFieldText props fullWidth is rendered 1`] = `
<oui-form-control-layout
  fullwidth="true"
>
  <oui-validatable-control>
    <input
      class="ouiFieldText ouiFieldText--fullWidth"
      type="text"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldText props isInvalid is rendered 1`] = `
<oui-form-control-layout
  fullwidth="false"
>
  <oui-validatable-control
    isinvalid="true"
  >
    <input
      class="ouiFieldText"
      type="text"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldText props isLoading is rendered 1`] = `
<oui-form-control-layout
  fullwidth="false"
  isloading="true"
>
  <oui-validatable-control>
    <input
      class="ouiFieldText ouiFieldText-isLoading"
      type="text"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiFieldText props readOnly is rendered 1`] = `
<oui-form-control-layout
  fullwidth="false"
  readonly="true"
>
  <oui-validatable-control>
    <input
      class="ouiFieldText"
      readonly=""
      type="text"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;
